--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="try_again">Try again</string>
     <string name="empty">Empty</string>
     <string name="function_not_implemented">We have not implement this function yet</string>
+    <string name="our_prodcut">Our product</string>
 </resources>
